--- a/style.css
+++ b/style.css
@@ -78,3 +78,19 @@ button {
     display: flex;
     align-items: stretch;
 }
+
+#search {
+/* google style search bar */
+    padding: 10px; /* Adjust padding as needed */
+  width: 250px; /* Fill the available width */
+  border: 1px solid #ccc; /* Border color */
+  border-radius: 20px; /* Adjust border radius for rounded corners */
+  font-size: 16px; /* Adjust font size as needed */
+  outline: none;
+}
+
+#searchBtn:hover {
+    cursor: pointer;
+    background-color: darkgoldenrod;
+    box-shadow: 0 0 30px rgba(255, 140, 0, 0.726);
+}
